added polyfill for babel at the footer

--- a/index.html
+++ b/index.html
@@ -33,5 +33,7 @@
         </div>
     </div>
     <script src="functions.js"></script>
+    <script src="./node_modules/babel-polyfill/browser.js"></script>
+    <p>this code is working!</p>
 </body>
 </html>
