--- a/blog.html
+++ b/blog.html
@@ -25,5 +25,6 @@
         <button class="btn btn-primary mx-auto" type="button" id="load-button">Add blog post</button>
     </div>
     <script src="blog.js"></script>
+    <script src="./node_modules/babel-polyfill/browser.js"></script>
 </body>
 </html>
